--- a/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
+++ b/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
@@ -13,3 +13,4 @@
     <Folder Include="wwwroot\images\avatars\" />
   </ItemGroup>
 </Project>
+<PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0" />
